--- a/UskudarDenetim.UI/Views/PracticalInformations/PracticalInformationDetail.cshtml
+++ b/UskudarDenetim.UI/Views/PracticalInformations/PracticalInformationDetail.cshtml
@@ -1,8 +1,34 @@
-﻿
+﻿@model UskudarDenetim.UI.Models.ModelPracticalInformation
 @{
     ViewBag.Title = "PracticalInformationDetail";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>PracticalInformationDetail</h2>
+<div id="main">
+    <div class="parallax full-width-bg">
+        <div class="container">
+            <div class="main-title">
+                <h1>Pratik Bilgiler</h1>
+            </div>
+        </div>
+    </div>
+    <!-- Container starts-->
+    <div class="container ">
+        <!-- Primary Starts -->
+        <section id="primary" class="content-full-width mt-40">
+            <!-- **Blog-post - Starts** -->
+            <article class="blog-post type3">
+                <!-- **entry-meta - Starts** -->
+                <!-- **entry-detail - Starts** -->
+                <div class="entry-detail">
+                    <div class="entry-title">
+                        <h4><a href="#">@Model.Name</a></h4>
+                    </div>
+                    <div class="entry-body">
+                        <p> @Html.Raw(Model.Detail)</p>
+                    </div>
+                </div> <!-- **entry-detail - Ends** -->
+            </article><!-- **Blog-post - Ends** -->
+        </section> <!-- **Primary - Ends** -->
+    </div> <!-- **container - Ends** -->
+</div>
 
