--- a/UskudarDenetim.UI/Views/Shared/_Employees.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Employees.cshtml
@@ -4,7 +4,7 @@
     <div class="full-width-section">
         <div class="dt-sc-margin50"></div>
         <div class="container">
-            <h2 class="aligncenter">Ekibimiz</h2>
+            <h2 class="aligncenter">Ekip Yapısı</h2>
             @*<p class="middle-align">Çalışma Arkadaşlarımız<br /> Latin literature from 45 BC, making it over 2000 years old. </p>*@
             <div class="dt-sc-hr-invisible-small"></div>
             <div class="dt-sc-timeline-wrapper">
