--- a/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
@@ -94,10 +94,11 @@
 
         </div>
     </div><!-- **footer-widgets-wrapper - End** -->
-
-    <div class="copyright">
+     
+    <div class="copyright" style="   background-color: #191919;
+    color: white;">
         <div class="container align-center">
-            <p>Tüm Hakları Saklıdır.Üsküdar Denetim © @DateTime.Now.Year <a href="www.ahmetsariyer.com.tr" target="_blank"></a></p>
+            <p>Tüm Hakları Saklıdır. Üsküdar Denetim © @DateTime.Now.Year <a href="www.ahmetsariyer.com.tr" target="_blank"></a></p>
         </div>
     </div>
 
