--- a/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,30 @@
 <!--[if IE 8 ]>    <html lang="en-gb" class="isie ie8 oldie no-~/Scripts"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en-gb" class="isie ie9 no-~/Scripts"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
-<html lang="tr-TR" class="no-js">
+<style>
+    h1 ,h2 ,h3,h4,h5,h6 ,p,a{
+        font-family: 'Open Sans', sans-serif !important;
+    }
+    .top-bar  container ul{
+        color:white !important;
+    }
+    .top-bar  .container ul li a {
+        color: white !important;
+    }
+    .top-bar .container ul li i {
+        color: white !important;
+    }
+    .top-bar .container ul li  span {
+        color: white !important;
+    }
+    .top-bar     {
+        background-color: #478bca !important;
+    }
+    #logo {
+        padding-top: 5px !important;
+    }
+    </style>
+<html lang="tr-TR" class="no-js" >
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -71,7 +94,7 @@
             jQuery('#error-modal-body').html(message)
             jQuery('#error-modal').modal();}
 
-        </script>>
+        </script>
 </body>
 </html>
 
