--- a/UskudarDenetim.UI/Content/style.css
+++ b/UskudarDenetim.UI/Content/style.css
@@ -2433,11 +2433,20 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     position: relative;
     z-index: 9999;
     background-color: #ffffff;
-    box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0 3px 6px -2px rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: 0 3px 6px -2px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0px 6px 35px -10px rgba(33, 150, 243, 0.68);
+    -moz-box-shadow: 0px 6px 35px -10px rgba(33, 150, 243, 0.68);
+    box-shadow: 0px 6px 35px -10px rgba(33, 150, 243, 0.68);
 }
-
+.menu li a {
+    border: none !important;
+    text-decoration: none !important;
+}
+.menu li {
+    border: none !important;
+}
+.menu li a :hover {
+   
+}
     .header.header2 #main-menu > ul.menu > li > a i {
         font-size: 14px;
         left: 13px;
@@ -6810,13 +6819,13 @@ ul.products li .product-wrapper.product-two-column {
     float:inherit !important;
 }
 .bg-button-color-success {
-    background-color: #6cac05 !important;
+    background-color: #23d318 !important;
 }
 
 .bg-button-color-danger {
-    background-color: #c90000 !important;
+    background-color: #f44336 !important;
 }
 
 .bg-button-color-info {
-    background-color: #ecd50a !important;
+    background-color: #ffc107 !important;
 }
