--- a/UskudarDenetim.UI/Views/Service/_WhatWeDo.cshtml
+++ b/UskudarDenetim.UI/Views/Service/_WhatWeDo.cshtml
@@ -2,15 +2,22 @@
     @{ 
         int count = 0;
     }
-<div class="parallax full-width-section pattern-bg">
+<style>
+    .cs-bg-box {
+        padding: 5px;
+        -webkit-box-shadow: 0px 0px 25px 6px rgba(22,69,110,0.59);
+        -moz-box-shadow: 0px 0px 25px 6px rgba(22,69,110,0.59);
+        box-shadow: 0px 0px 25px 6px rgba(22,69,110,0.59);
+    }        
+        </style>>
+<div class="parallax full-width-section pattern-bg ">
     <div class="dt-sc-margin65"></div>
     <div class="container">
-        <h2 class="aligncenter">Hizmetlerimiz</h2>
-        <p class="middle-align">Hizmetlerimiz Hakkında daha fazla bilgi almaya ne dersiniz.</p>
+        <h2 class="aligncenter" style="margin-top:0px">Hizmetlerimiz</h2>
         <div class="dt-sc-hr-invisible-small"></div>
         @foreach (var service in Model)
         {
-            <div class="column dt-sc-one-third @if (count%3==0)
+            <div class="column dt-sc-one-third  @if (count%3==0)
             {
                 /*1.kolon ilk elemanlara first class eklenmeli*/<text>first</text>
             }   ">
@@ -19,15 +26,15 @@
                     
                     <!-- **entry-thumb - Starts** -->
                     <div class="entry-thumb">
-                        <a href="blog-detail-with-right-sidebar.html"><img src="@service.ImageUrl" alt="image" /></a>
+                        <a href="#"><img src="http://placehold.it/1170x592&text=Image" alt="image" /></a>
                     </div> <!-- **entry-thumb - Ends** -->
                     <!-- **entry-detail - Starts** -->
                     <div class="entry-detail">
                         <div class="entry-title">
-                            <h4><a href="blog-detail-with-right-sidebar.html"> 	@service.Name</a></h4>
+                            <h4><a href="#l"> 	@service.Name</a></h4>
                         </div>
                         <div class="entry-body">
-                            <p>@service.Description</p>
+                            <p>@service.ShortDescription ...</p>
                         </div>
                         <a class="read-more" href="@Url.Action("ServiceDetail","Service",new { id=service.Id })">Devamını Oku.. <span class="fa fa-long-arrow-right"></span> </a>
                     </div> <!-- **entry-detail - Ends** -->
